# fastinahurry

./: .clang-format  .clang-format.OLD  .clangd  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  Makefile  README.md  client_main.cc  config.toml  coverage.json  devenv.nix  flake-clang-attempt.nix  flake.nix  main.cc  option  orders.json  server_main.cc  shell.nix  test
.forgejo/workflows/: ci.yml  gcc-debug.yml
.gitea/workflows/: mirror-to-github.yaml
benchmarks/: MPSCQueue_bench.cc  spscqueue_benchmark.cc
check/: all_headers.cc
data/: orders.json
etc/: testconfig.toml
examples/: spsc_queue_example.cc
html/: Algo_8cc.html  Algo_8cc__incl.map  Algo_8cc__incl.md5  Algo_8hh.html  Algo_8hh.js  Algo_8hh__dep__incl.map  Algo_8hh__dep__incl.md5  Algo_8hh__incl.map  Algo_8hh__incl.md5  Algo_8hh_source.html  Controller_8cc.html  Controller_8cc__incl.map  Controller_8cc__incl.md5  Controller_8hh.html  Controller_8hh.js  Controller_8hh__dep__incl.map  Controller_8hh__dep__incl.md5  Controller_8hh__incl.map  Controller_8hh__incl.md5  Controller_8hh_source.html  JSONReader_8cc.html  JSONReader_8cc.js  JSONReader_8cc__incl.map  JSONReader_8cc__incl.md5  JSONReader_8hh.html  JSONReader_8hh.js  JSONReader_8hh__dep__incl.map  JSONReader_8hh__dep__incl.md5  JSONReader_8hh__incl.map  JSONReader_8hh__incl.md5  JSONReader_8hh_source.html  Publisher_8cc.html  Publisher_8cc__incl.map  Publisher_8cc__incl.md5  Publisher_8hh.html  Publisher_8hh.js  Publisher_8hh__dep__incl.map  Publisher_8hh__dep__incl.md5  Publisher_8hh__incl.map  Publisher_8hh__incl.md5  (+134 more)
html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js
include/: Algo.hh  AlgoException.hh  Constants.hh  Controller.hh  MarketData.hh  Order.hh  PayOff.hh  Publisher.hh  VanillaOption.hh
include/fiah/: Algo.hh  AlgoException.hh  Controller.hh  Core.hh  CoreException.hh  Error.hh  ThreadPool.hpp
include/fiah/app/: Controller.hh  Core.hh
include/fiah/error/: CoreException.hh  Error.hh
include/fiah/handle/: Any.cc  SharedPtr.hh  UniquePtr.hh
include/fiah/io/: Cassandra.hh  Cassandra.hpp  Config.hh  MarketFeed.hh  Socket.hh  SocketRAII.hh  SocketRAII.hpp  Tcp.hh  TcpClient.hh  TcpServer.hh  Udp.hh
include/fiah/market/: MarketData.hh  MarketFeed.cc  MarketFeed.hh  Order.hh  Orderbook.hh
include/fiah/math/: AutoDiff.hpp  FiniteDiff.hpp  NewtonRaphson.hpp  finediff  main.cc
include/fiah/memory/: BumpAllocator.hh  BumpArena.hh  unique_ptr.hh
include/fiah/options/: PayOff.hh  PayOffCall.hh  PayOffDoubleDigital.hh  PayOffPut.hh  VanillaOption.hh
include/fiah/structs/: MPSCQueue.hh  Orderbook.hh  SPSCQueue.hh  Structs.hh  ThreadSafeQueue.hh  ThreadSafeQueue.hpp  Vector.hh
include/fiah/thread/: ThreadPool.hh  ThreadPool.hpp
include/fiah/utils/: Constants.hh  Logger.hh  LoggerImpl.hpp  Logger_new.hh  NOUSE_.cpp  SPSCLogger.hh  SimpleLogger.hh  TSCTimer.hh  TimeStamp.hh  Timer.hh  Timer.hpp  TomlParser.hh  TypeFlags.hh  Types.hh  XorBitant.hh
include/io/: Cassandra.hpp  Config.hh  JSONReader.hh  Publisher.hh  SocketRAII.hpp  Tcp.hh  TcpClient.hh  TcpError.hh  TcpServer.hh
include/market/: Order.hh
include/math/: matrix.hpp
include/options/: PayOff.hh  PayOffCall.hh  PayOffDoubleDigital.hh  PayOffPut.hh  VanillaOption.hh
include/readers/: JSONReader.hh
include/structs/: LFSPSC.hh
include/utils/: Logger.hh  ThreadPool.hh  ThreadSafeQueue.hh  Timer.hpp
latex/: Algo_8cc.tex  Algo_8cc__incl.md5  Algo_8hh.tex  Algo_8hh__dep__incl.md5  Algo_8hh__incl.md5  Algo_8hh_source.tex  Controller_8cc.tex  Controller_8cc__incl.md5  Controller_8hh.tex  Controller_8hh__dep__incl.md5  Controller_8hh__incl.md5  Controller_8hh_source.tex  JSONReader_8cc.tex  JSONReader_8cc__incl.md5  JSONReader_8hh.tex  JSONReader_8hh__dep__incl.md5  JSONReader_8hh__incl.md5  JSONReader_8hh_source.tex  Publisher_8cc.tex  Publisher_8cc__incl.md5  Publisher_8hh.tex  Publisher_8hh__dep__incl.md5  Publisher_8hh__incl.md5  Publisher_8hh_source.tex  ThreadPool_8cc.tex  ThreadPool_8cc__incl.md5  ThreadPool_8hh.tex  ThreadPool_8hh__dep__incl.md5  ThreadPool_8hh__incl.md5  ThreadPool_8hh_source.tex  ThreadSafeQueue_8cc.tex  ThreadSafeQueue_8hh.tex  ThreadSafeQueue_8hh__dep__incl.md5  ThreadSafeQueue_8hh__incl.md5  ThreadSafeQueue_8hh_source.tex  annotated.tex  classAlgo.tex  classAlgo__coll__graph.md5  classAlgo_a8fcaaeaa5ad212a126490a19370c9b7e_cgraph.md5  classAlgo_ac223b246cd2f8851c4e0893ff41547fa_cgraph.md5  (+29 more)
proto/: msg.proto  ticket_exchange.proto  trading.proto
src/: Algo.cc  Controller.cc  Order.cc  PayOff.cc  Publisher.cc  ThreadPool.cc  VanillaOption.cc  cassandra_example.cc  client_main.cc  grpc_server.cc  server_main.cc  test.cpp
src/fiah/: Algo.cc  Controller.cc  Core.cc  ThreadPool.cc
src/fiah/app/: Controller.cc  Core.cc  client_main.cc  server_main.cc
src/fiah/client/: main.cc
src/fiah/io/: Config.cc  JSONReader.cc  MarketFeed.cc  Publisher.cc  TcpClient.cc  TcpServer.cc  grpc_client.cc  grpc_server.cc
src/fiah/market/: MarketFeed.cc  Order.cc
src/fiah/options/: PayOff.cc  PayOffDoubleDigital.cc  VanillaOption.cc  main.cc
src/fiah/server/: main.cc
src/fiah/thread/: ThreadPool.cc
src/fiah/utils/: TomlParser.cc
src/io/: Config.cc  JSONReader.cc  Publisher.cc  TcpClient.cc  TcpServer.cc
src/market/: Order.cc
src/options/: PayOff.cc  PayOffDoubleDigital.cc  VanillaOption.cc  main.cc
src/readers/: JSONReader.cc
src/utils/: ThreadPool.cc  ThreadSafeQueue.cc
tests/: Allocator_test.cc  Logger_test.cc  Memory_test.cc  Orderbook_test.cc  README.md  ThreadPool_test.cc  Timer_test.cc  Vector_test.cc  XorBitant_test.cc  algo_test.cc  core_test.cc  spscqueue_test.cc  test.cc  test_utils.hh  threadpool_test.cc
